apps/nextcloud/resources/whiteboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-whiteboard
  labels:
    app.kubernetes.io/component: whiteboard
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: whiteboard
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/component: whiteboard
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
        - name: whiteboard
          image: "ghcr.io/nextcloud-releases/whiteboard"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3002
          volumeMounts:
            - name: whiteboard-backup
              mountPath: /app/backup
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 30
            timeoutSeconds: 1
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 30
            timeoutSeconds: 1
            initialDelaySeconds: 5
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
      volumes:
        - name: whiteboard-backup
          emptyDir:
            sizeLimit: 500Mi
