apps/nextcloud/resources/whiteboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-whiteboard
  labels:
    app.kubernetes.io/component: whiteboard
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3002
      targetPort: 3002
  selector:
    app.kubernetes.io/component: whiteboard
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
