apps/nextcloud/resources/whiteboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-whiteboard
  labels:
    app.kubernetes.io/component: whiteboard
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
spec:
  hostnames:
  - nextcloud-whiteboard.engiqueersconcordia.ca
  parentRefs:
    - name: engiqueers
      namespace: ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-whiteboard
          port: 3002
